--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 .obsidian/appearance.json
 .obsidian/core-plugins.json
 .obsidian/graph.json
+.obsidian/types.json
+.obsidian/plugins/obsidian-excalidraw-plugin/styles.css
+.obsidian/plugins/obsidian-excalidraw-plugin/manifest.json
+.obsidian/plugins/obsidian-excalidraw-plugin/main.js
+.obsidian/plugins/obsidian-excalidraw-plugin/data.json
+.obsidian/community-plugins.json
