--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,2 @@
-.obsidian/workspace.json
-.obsidian/app.json
-.obsidian/appearance.json
-.obsidian/core-plugins.json
-.obsidian/graph.json
-.obsidian/types.json
-.obsidian/plugins/obsidian-excalidraw-plugin/styles.css
-.obsidian/plugins/obsidian-excalidraw-plugin/manifest.json
-.obsidian/plugins/obsidian-excalidraw-plugin/main.js
-.obsidian/plugins/obsidian-excalidraw-plugin/data.json
-.obsidian/community-plugins.json
+.obsidian/*
 .DS_Store
