--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .obsidian/*
 .DS_Store
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/interviews.iml
+.idea/modules.xml
+.idea/vcs.xml
+.DS_Store
+.DS_Store
